fix(app): fixes card margin on iOS

--- a/src/app/pages/exchange-confirm/exchange-confirm.scss
+++ b/src/app/pages/exchange-confirm/exchange-confirm.scss
@@ -8,6 +8,3 @@
 .line--second {
   border-left: 1px solid var(--ion-color-dark);
 }
-ion-content {
-  --padding-end: 16px;
-}
