--- a/src/global.scss
+++ b/src/global.scss
@@ -101,6 +101,11 @@ ion-fab .col {
 ion-card {
   padding: 8px 0;
 }
+page-account-transaction-list {
+  .sc-ion-card-ios-h {
+    margin: 8px 16px;
+  }
+}
 
 /* Card Styling */
 page-portfolio,
